--- a/task-api-service/.env
+++ b/task-api-service/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:Ravensgate23!@db.lpfcmpkamozzwbpsoplb.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.lpfcmpkamozzwbpsoplb:Ravensgate23!@aws-0-us-east-2.pooler.supabase.com:6543/postgres
