--- a/task-api-service/.env
+++ b/task-api-service/.env
@@ -1,1 +1,7 @@
 DATABASE_URL=postgresql://postgres.lpfcmpkamozzwbpsoplb:Ravensgate23!@aws-0-us-east-2.pooler.supabase.com:6543/postgres
+
+DB_USER=postgres
+DB_PASSWORD=Ravensgate23!
+DB_HOST=db.lpfcmpkamozzwbpsoplb.supabase.co
+DB_PORT=5432
+DB_NAME=postgres
