updated db connection

--- a/task-api-service/.env
+++ b/task-api-service/.env
@@ -2,6 +2,6 @@ DATABASE_URL=postgresql://postgres.lpfcmpkamozzwbpsoplb:Ravensgate23!@aws-0-us-e
 
 DB_USER=postgres
 DB_PASSWORD=Ravensgate23!
-DB_HOST=db.lpfcmpkamozzwbpsoplb.supabase.co
+DB_HOST=lpfcmpkamozzwbpsoplb.supabase.co
 DB_PORT=5432
 DB_NAME=postgres
