--- a/task-api-service/.env
+++ b/task-api-service/.env
@@ -1,7 +1,7 @@
 DATABASE_URL=postgresql://postgres.lpfcmpkamozzwbpsoplb:Ravensgate23!@aws-0-us-east-2.pooler.supabase.com:6543/postgres
-
 DB_USER=postgres.lpfcmpkamozzwbpsoplb
 DB_PASSWORD=Ravensgate23!
 DB_HOST=aws-0-us-east-2.pooler.supabase.com
 DB_PORT=6543
 DB_NAME=postgres
+MAGIC_SECRET_KEY=sk_live_A76A3323E4B8EEF5
