--- a/task-api-service/package.json
+++ b/task-api-service/package.json
@@ -8,11 +8,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "magic-sdk": "^29.2.1",
     "pg": "^8.11.2"
   },
   "devDependencies": {
