--- a/task-api-service/package.json
+++ b/task-api-service/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@magic-sdk/admin": "^2.4.1",
+    "@supabase/supabase-js": "^2.52.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
