--- a/task-api-service/package.json
+++ b/task-api-service/package.json
@@ -16,7 +16,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "magic-sdk": "^29.2.1",
-    "pg": "^8.11.2"
+    "pg": "^8.11.2",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
