support openai, create 3 suggested tasks for users for productivity, create 3 standard tasks out of the gate, create new ai service to handle messages, handle messages differently depending on the tier the subscription tier the user is in

--- a/task-api-service/package.json
+++ b/task-api-service/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
+  "description": "Enhanced Task Management API Service with AI capabilities",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "echo \"Tests not configured yet\" && exit 0",
+    "lint": "echo \"Linting not configured yet\" && exit 0"
   },
   "dependencies": {
     "@magic-sdk/admin": "^2.4.1",
@@ -13,13 +16,27 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^6.11.2",
     "express-validator": "^7.0.1",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "magic-sdk": "^29.2.1",
+    "morgan": "^1.10.1",
+    "openai": "^5.10.2",
     "pg": "^8.11.2",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
-  }
+  },
+  "keywords": [
+    "task",
+    "api",
+    "express",
+    "postgresql",
+    "ai",
+    "todo"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
