Add API key security guide and update environment template
- Add SECURITY.md with critical API key management guidelines
- Update .env.example with comprehensive configuration template
- Document secure environment variable practices
- Ensure no sensitive data is committed to version control

--- a/task-api-service/.env.example
+++ b/task-api-service/.env.example
@@ -12,9 +12,13 @@ DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 MAGIC_SECRET_KEY=your_magic_secret_key
 JWT_SECRET=your_jwt_secret_key
 
-# OpenAI Configuration
-OPENAI_API_KEY=sk-proj-your_openai_secret_key_here
-OPENAI_ORGANIZATION_ID=org-your_organization_id_here
+# OpenAI Configuration (Required for AI features)
+OPENAI_API_KEY=sk-proj-your-openai-api-key-here
+OPENAI_ORGANIZATION_ID=org-your-openai-org-id
+
+# Fine-Tuned Models (Optional - will fallback to standard models)
+FINETUNED_TASK_MODEL_ID=ft:gpt-4o:your-org:task-assistant:abc123
+FINETUNED_GENERAL_MODEL_ID=ft:gpt-4o:your-org:general-assistant:xyz789
 
 # Stripe Configuration
 STRIPE_SECRET_KEY=your_stripe_secret_key
